--- a/index.css
+++ b/index.css
@@ -5,51 +5,144 @@
 }
 
 a {
-	text-decoration: none;
+	color: #a2b3be;
 }
 
 .container {
 	font-family: open-sans, verdana, sans-serif;
+	font-size: 0px;	
+	color: #5d686e;
 
-
-}
-
-.text {
-	line-height: 25px;
-		color: #5d686e;
-	font-size: 15px;
-	font-weight: 300;
-}
-
-.text a {
-	text-decoration: underline;
-	color: #a2b3be;
-}
-
-.text a:visited {
-	color: blue;
 }
 
 .hero {
 	background-image: url("assets/images/header.jpg");
 	background-size: cover;
 	height: 523px;
+	width: 100%;
 	text-align: center;
+	color: #02344f;
+	font-size: 15px;
 }
 
-.left-link {
+.row {
+	position: relative;
+}
+
+.left-side {
 	text-align: left;
 	text-transform: uppercase;
-	color:	black;
+	line-height: 40px;
+	height: 40px;
+	vertical-align: top;
+	position: absolute;
+	left:	40px;
+	top: 10px;
+}
 
+.logo {
+	display: inline-block;
+	margin-right: 5px;
+}
+
+.hero a {
+	text-decoration: none;
+	color: #02344f;
+}
+
+.right-link {
+	font-family: oswald;
+	text-transform: uppercase;
+	color: black;
+	height: 40px;
+	line-height: 40px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	font-size: 18px;
+}
+
+.link {
+		display: inline-block;
+		margin-left: 10px;
+}
+
+.title {
+	color: white;
+	font-size: 100px;
+	text-align: center;
+	padding-top: 176.5px;
+	text-shadow: 2px 2px #116296;
 }
 
 
 
 
+.center {
+	display: inline-block;
+	width: 50%;
+	margin: 50px 5% 50px 10%;
+	font-size: 15px;
+}
+
+.headline {
+	color: #023450;
+	font-size: 65px;
+	font-family: oswald;
+	line-height: 1.1em;
+}
+
+.byline {
+	line-height: 20px;
+	font-size: 12px;
+}
+
+.avatar {
+	width: 100%;
+	height: 100%;
+}
+
+.text {
+	line-height: 1.75em;
+	font-weight: 300;
+}
+
+.text a:visited {
+	color: blue;
+}
 
 
 
 .sidebar {
-	smaller gray text
+	display: inline-block;
+	width: 278px; /*was 25%*/
+	margin: 50px 10% 50px 0px;
+	vertical-align: top;
+	color: #a2b3be;
+	font-size: 14px;
+}
+
+.adbox {
+	text-align: right;
+	width: 100%;
+}
+
+.ad-image {
+ is 278px
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.post-thumb {
+	display: inline-block;
+	width: 25%;
 }
