--- a/index.css
+++ b/index.css
@@ -4,15 +4,50 @@
 	box-sizing: border-box;
 }
 
+
+/*links*/
+
 a {
 	color: #a2b3be;
+}
+
+a:hover {
+	color: #016eae;
+	text-decoration: underline;
+}
+
+.hero a {
+	text-decoration: none;
+	color: #02344f;
+}
+
+.foot a {
+	text-decoration: none;
+}
+
+.avatar a {
+	text-decoration: none;
+	color: #016eae;
+}
+
+.text a:visited {
+	color: blue;
+}
+
+p {
+	/*replace .text with p settings; add top/bottom margin*/
+}
+
+/*smaller gray text for use outside main content*/
+.sub {
+	color: #a2b3be;
+	font-size: 14px;
 }
 
 .container {
 	font-family: open-sans, verdana, sans-serif;
 	font-size: 0px;	
 	color: #5d686e;
-
 }
 
 .hero {
@@ -45,10 +80,7 @@ a {
 	margin-right: 5px;
 }
 
-.hero a {
-	text-decoration: none;
-	color: #02344f;
-}
+
 
 .right-link {
 	font-family: oswald;
@@ -81,7 +113,7 @@ a {
 .center {
 	display: inline-block;
 	width: 50%;
-	margin: 50px 5% 50px 10%;
+	margin: 62px 5% 50px 10%;
 	font-size: 15px;
 }
 
@@ -94,13 +126,24 @@ a {
 
 .byline {
 	line-height: 20px;
-	font-size: 14px;
+
 }
 
 .avatar {
-	width: 100%;
-	height: 100%;
 	display: inline-block;
+	font-size: 13px;
+	
+}
+
+.icon {
+		height: 22px;
+		width: auto;
+		display: inline-block;
+}
+
+.date {
+	display: inline-block;
+	
 }
 
 
@@ -110,8 +153,14 @@ a {
 	font-weight: 300;
 }
 
-.text a:visited {
-	color: blue;
+.excerpt {
+	border-left: solid 2px #D3D3D3;
+	font-size: 26px;
+
+	padding-left: 10px;
+	margin: 15px 5px;
+	line-height: 54px;
+	color: #016EAE;
 }
 
 
@@ -121,8 +170,6 @@ a {
 	width: 278px; /*was 25%*/
 	margin: 50px 10% 50px 0px;
 	vertical-align: top;
-	color: #a2b3be;
-	font-size: 14px;
 }
 
 .adbox {
