--- a/index.css
+++ b/index.css
@@ -56,6 +56,11 @@ p {
 	font-size: 14px;
 }
 
+/*consider this for what is now avatar, button link, and social
+.mini {
+	font-size:13px;
+}*/
+
 .container {
 	font-family: "open sans", verdana, sans-serif;
 	font-size: 0px;	
@@ -95,9 +100,13 @@ p {
 .right {
 	position: absolute;
 	right: 10%;
-	top: 0px;
+	top: 20px;
 }
 
+.link {
+		display: inline-block;
+		margin-left: 0px 5px;
+}
 .info {
 	font-family: oswald;
 	text-transform: uppercase;
@@ -107,10 +116,7 @@ p {
 	font-size: 18px;
 }
 
-.link {
-		display: inline-block;
-		margin-left: 0px 5px;
-}
+
 
 .title {
 	color: white;
@@ -170,6 +176,17 @@ p {
 }
 
 
+.button {
+	color: white;
+	background-color: #A2B3BE;
+	height: 25px;
+	line-height: 25px;
+	margin-right: 5px;
+	padding-left: 0px 5px;
+}
+
+
+/* for button img, make a square container with a darker b/g - something universal so that the blue one can use it too?*/
 
 .sidebar {
 	display: inline-block;
@@ -218,6 +235,7 @@ p {
 .foot {
 	border-top: #E1E7EA solid 1px;
 	text-align: center;
+	width: 100%;
 }
 
 
@@ -227,6 +245,10 @@ p {
 	display: inline-block;
 	width: 25%;
 	position: relative;
+}
+
+.post-thumb img {
+	width: 100%;
 }
 
 .thumb-text {
@@ -239,18 +261,30 @@ p {
 
 .bottom {
 	background-color: #04344F;
-	width: 100%;
 	height: 100px;
+	line-height: 40px;
+	padding: 30px 160px;
 	font-size: 15px;
+	color: #A2B3BE;
+	text-align: right;
 }
 
 .copyright {
 	text-align: left;
-
+	display: inline-block;
+	vertical-align: top;
+	float: left;
 }
 
 .nav
 	{
+	text-align: right;
 	border-right: solid #5d686e 1px;
 	padding-right: 5px;
+	line-height: 1em;
+
 	}
+
+.nav:last-of-type {
+	border-right: none;
+}
