--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ p {
 	line-height: 1.75em;
 	font-weight: 300;
 	font-family: "open sans";
+	font-size: 15px;
 
 
 }
@@ -133,7 +134,6 @@ p {
 	display: inline-block;
 	width: 50%;
 	margin: 62px 5% 50px 10%;
-	font-size: 15px;
 }
 
 .headline {
@@ -179,11 +179,30 @@ p {
 .button {
 	color: white;
 	background-color: #A2B3BE;
-	height: 25px;
-	line-height: 25px;
-	margin-right: 5px;
-	padding-left: 0px 5px;
+	line-height: 30px;
+	margin-right: 10px;
+	padding-right: 10px;
+	font-size: 14px;
+	height: 30px;
 }
+
+.button-icon {
+	background-color: rgba(0,0,25,0.5);
+	display: inline-block;
+	width: 35px;
+	text-align: center;
+}
+
+.button-icon img {
+height: auto;
+	vertical-align: middle;
+}
+
+.blue {
+	background-color: #016EAE;
+}
+
+
 
 
 /* for button img, make a square container with a darker b/g - something universal so that the blue one can use it too?*/
@@ -244,7 +263,7 @@ p {
 .post-thumb {
 	display: inline-block;
 	width: 25%;
-	position: relative;
+	
 }
 
 .post-thumb img {
