--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ p {
 	position: absolute;
 	left:	40px;
 	top: 10px;
+	font-size: 18px;
 }
 
 .logo {
@@ -113,8 +114,9 @@ p {
 	text-transform: uppercase;
 	color: black;
 	height: 40px;
-	line-height: 40px;
+	line-height: 20px;
 	font-size: 18px;
+	margin-right: 5px;
 }
 
 
@@ -180,10 +182,10 @@ p {
 	color: white;
 	background-color: #A2B3BE;
 	line-height: 30px;
-	margin-right: 10px;
+	margin: 20px 10px 18px 0px;
 	padding-right: 10px;
 	font-size: 14px;
-	height: 30px;
+	height: 30px;	
 }
 
 .button-icon {
@@ -194,7 +196,7 @@ p {
 }
 
 .button-icon img {
-height: auto;
+	height: auto;
 	vertical-align: middle;
 }
 
@@ -212,6 +214,7 @@ height: auto;
 	width: 278px; /*was 25%*/
 	margin: 50px 10% 50px 0px;
 	vertical-align: top;
+		font-size: 13px;
 }
 
 .connect {
@@ -220,19 +223,21 @@ height: auto;
 
 #author {
 	font-size: 16px;
-
+	padding-top: 7px;
 }
 
 .social {
 	color: #A2B3BE;
 	margin: 0px 6px;
 	display: inline-block;
-	font-size: 13px;
+
 }
 
 .adbox {
 	text-align: right;
 	width: 100%;
+	line-height: 1.6em;
+	padding-top: 52px;
 }
 
 .ad-image {
@@ -244,6 +249,7 @@ height: auto;
 	font-size: 18px;
 	color: #016eae;
 	margin-top: 45px;
+	margin-bottom: -19px;
 
 }
 
@@ -255,6 +261,11 @@ height: auto;
 	border-top: #E1E7EA solid 1px;
 	text-align: center;
 	width: 100%;
+	padding-top: 35px;
+}
+
+.foot .headline {
+	padding-bottom: 39px;
 }
 
 
@@ -263,20 +274,28 @@ height: auto;
 .post-thumb {
 	display: inline-block;
 	width: 25%;
-	
+
 }
 
 .post-thumb img {
 	width: 100%;
+
 }
 
 .thumb-text {
 	text-transform: uppercase;
-	font-size: 18px;
+	font-size: 30px;
 	color: white;
 	position: absolute;
-	bottom: 20px;
+	bottom: 10px;
+	font-family: oswald;
+	margin-left: 20px;
+	width: 225px;
+	text-align: left;
+	line-height: 1.25em;
 }
+
+
 
 .bottom {
 	background-color: #04344F;
