--- a/surf.css
+++ b/surf.css
@@ -18,6 +18,9 @@
 	width: 100%;
 	background-size: cover;
 	position:relative;
+	font-family: 'Open Sans';
+
+
 }
 
 .content {
@@ -51,40 +54,56 @@
 	font-size: 10px;
 }
 
+.bigfoot {
+	width: 100%;
+	margin-bottom: 0px;
+
+	
+}
 .foot {
 	width: 100%;
 	display: inline-block;
 	position:relative;
 	text-align: bottom;
-
+	top: 30px;
 }
 
 .footer {
 	width: 100%;
 	position:relative;
-	background-color: gray;
-	margin-top: 0px;
+	background-color: #0D3451;
+	top: 25px;
+	height: 15vh;
 
 }
 
 /* Text Decoration*/
 
 a {
-	color: ;
+	color: gray;
 }
 
 /*Top*/
 .link-left {
 	display:inline-block;
-	top: 5px;
+	top: 10px;
 	left: 100px;
 	line-height: 45px ;
-	height: 45px;
-	text-align: center;
+	vertical-align: top;
 	position:relative;
+	text-transform: uppercase;
+	color: #0D3450;
+}
+
+.link-left img {
+	width: 45px;
+	height: 45px;
+	margin-right: 10px;
 }
 
 .link-right {
+	font-family: 'Oswald';
+	text-transform: uppercase;
 	display: inline-block;
 	position: absolute;
 	right: 200px;
@@ -94,8 +113,15 @@ a {
 	
 }
 
+.link-right .cell {
+	color: #0D3450;
+}
+
 .cell {
 	display: inline-block;
+	margin-bottom: 40px;
+	color: gray;
+	margin-right: 10px;
 }
 
 .head {
@@ -107,33 +133,42 @@ a {
 	font-family: 'Open Sans';
 	color:white;
 	font-size: 80px;
+    line-height: 80px;
+	margin-bottom: 0px;
 	
 }
 
-.subheadline {
-	font-family: 'Oswald';
-	color: gray;
+.sub-headline {
+	color: #0D3450;
+	font-size: 12px;
 }
 
 
 /*Content*/
 .content-headline {
 	font-family: 'Oswald';
+	color: #000027;
 	text-transform: uppercase;
 	line-height: 50px;
 	font-size: 50px;
 }
 
 .sub-content {
-
-
+	height: 20px;
+	vertical-align: top;
+	margin-top: 20px;
+	width: 45%;
+	color: #206DB1;
 }
+
 .sub-content img {
 	height: 20px;
 	width: 20px;
-	margin-top: 20px;
-	vertical-align: center;
+	margin-right: 10px;
+}
 
+.sub-content a {
+	vertical-align: top;
 }
 
 .cell-content {
@@ -146,14 +181,16 @@ a {
 
 .whoa {
 	font-family: 'Open Sans';
+	color: #206DB1;
 	font-size: 24px;
 	text-transform: uppercase;
 	left: 50px;
 	margin-top: 10px;
 	padding-left: 5px;
-	border-left: 1px solid gray;
+	border-left: 1px solid #A4B3BF;
 	position: relative;
 	left: 20vh;
+
 }
 
 /*Button*/
@@ -161,20 +198,28 @@ a {
 .button img {
 	height: 19px;
 	width: 19px;
-	border: 1px gray;
-	background-color: gray;
+	border: 1px #5E686F;
+	background-color: #5E686F;
 	vertical-align: top;
 	margin-bottom: 20px;
 	padding: 5px;
 }
+ img:hover {
+	background-color: #0D3451;
+	border: 1px #0D3451;
+}
+.social:hover {
+	background-color: #206DB1;
+}
 
 .social {
 	display: inline-block;
-	background-color: #c5c5c5;
+	background-color: #A4B3BF;
 	font-size: 10px;
 	padding: 0px 10px;
 	line-height: 19px;
 	margin-right: 5px;
+	color: white;
 }
 
 .button {
@@ -182,6 +227,8 @@ a {
 	left: 20vh;
 	font-size: 0px;
 }
+
+
 
 .left-row {
 	display: inline-block;
@@ -197,6 +244,7 @@ a {
 .name {
 	font-size: 14px;
 	text-transform: uppercase;
+	color: #206DB1;
 }
 .left-row {
 	text-align: center;
@@ -205,6 +253,7 @@ a {
 .about-ad {
 	text-align: right;
 	width: 265px;
+	margin-bottom: 20px;
 }
 
 .about img {
@@ -216,6 +265,8 @@ a {
 	font-family: 'Oswald';
 	text-transform: uppercase;
 	font-size: 14px;
+	text-align: left;
+	color: #206DB1;
 }
 
 .left-row p {
@@ -235,8 +286,14 @@ a {
 	text-transform: uppercase;
 	font-size: 0px;
 	position: relative;
-	color: white;
+	color: #000027;
+	margin-top: 30px;
 	
+}
+
+
+.blue {
+	padding-left: 10px;
 }
 
 .foot-headline1{
@@ -246,6 +303,31 @@ a {
 	display: inline-block;
 	background-image: url(assets/images/article-image-1.jpg);
 	font-size: 24px;
+	vertical-align: bottom;
+	
+}
+
+
+.foot-headline1  .blue {
+	opacity: .75;
+	background: #1E5C92;
+	height: 300px;
+	position: relative;
+	
+}
+.foot-headline1  .blue:hover {
+	opacity: 1;
+	background: none;
+}
+
+.foot-headline1:hover {
+	line-height: 550px;
+	height: 300px;
+	width: 25%;
+	display: inline-block;
+	background-image: url(assets/images/article-image-1.jpg);
+	font-size: 24px;
+	color: white;
 	vertical-align: bottom;
 }
 
@@ -258,7 +340,28 @@ a {
 	font-size: 24px;
 	vertical-align: bottom;
 }
+.foot-headline2  .blue {
+	opacity: .75;
+	background: #1E5C92;
+	height: 300px;
+	position: relative;
+}
 
+.foot-headline2  .blue:hover {
+	opacity: 1;
+	background: none;
+}
+
+.foot-headline2:hover {
+	line-height: 550px;
+	height: 300px;
+	width: 25%;
+	display: inline-block;
+	background-image: url(assets/images/article-image-2.jpg);
+	font-size: 24px;
+	color: white;
+	vertical-align: bottom;
+}
 
 .foot-headline3 {
 	line-height: 550px;
@@ -267,6 +370,28 @@ a {
 	display: inline-block;
 	background-image: url(assets/images/article-image-3.jpg);
 	font-size: 24px;
+	vertical-align: bottom;
+}
+.foot-headline3  .blue {
+	opacity: .75;
+	background: #1E5C92;
+	height: 300px;
+	position: relative;
+}
+
+.foot-headline3  .blue:hover {
+	opacity: 1;
+	background: none;
+}
+
+.foot-headline3:hover {
+	line-height: 550px;
+	height: 300px;
+	width: 25%;
+	display: inline-block;
+	background-image: url(assets/images/article-image-3.jpg);
+	font-size: 24px;
+	color: white;
 	vertical-align: bottom;
 }
 
@@ -279,27 +404,59 @@ a {
 	font-size: 24px;
 	vertical-align: bottom;
 }
+.foot-headline4  .blue {
+	opacity: .75;
+	background: #1E5C92;
+	height: 300px;
+	position: relative;
+}
+
+.foot-headline4  .blue:hover {
+	opacity: 1;
+	background: none;
+}
+
+.foot-headline4:hover {
+	line-height: 550px;
+	height: 300px;
+	width: 25%;
+	display: inline-block;
+	background-image: url(assets/images/article-image-4.jpg);
+	font-size: 24px;
+	color: white;
+	vertical-align: bottom;
+}
 
 /*Footer */
 
 .footer-left {
 	display:inline-block;
-	top: 5px;
-	left: 100px;
+	left: 150px;
 	line-height: 35px ;
-	height: 45px;
-	vertical-align: top;
+	vertical-align: center;
 	position:relative;
 	font-size: 12px;
+	color: #A4B3BF;
+	font-family: 'Open Sans';
 }
 
+.footer-left {
+	vertical-align: top;
+	top: 30px;
+}
+
+.footer-left img {
+	margin-right: 7px;
+}
 .footer-right {
 	display: inline-block;
 	position: absolute;
 	right: 200px;
 	line-height: 45px;
-	bottom: 1px;
+	bottom: 25px;
 	font-size: 0px;
+	font-family: 'Open Sans';
+	font-size: 12px;
 	
 }
 
@@ -307,4 +464,13 @@ a {
 	display: inline-block;
 	font-size: 12px;
 	text-align: center;
+	color: #A4B3BF;
+	border-right: 1px solid #A4B3BF;
+	line-height: 12px;
+	padding-right: 5px;
+	padding-left: 5px;
+}
+
+.footer-cell:last-of-type {
+	border-right: none;
 }
