--- a/surf-and-paddle.css
+++ b/surf-and-paddle.css
@@ -271,7 +271,7 @@ a{
 
 .row{
 	display: inline-block;
-	vertical-align: top;
+
 }
 
 .header{
@@ -281,7 +281,6 @@ a{
 
 .pictures{
 	display: inline-block;
-	vertical-align: top;
 	width: 100%;
 	font:0px;
 }
@@ -289,7 +288,7 @@ a{
 
 .article{
 	background-image:url("assets/images/article-image-1.jpg");
-	height:79vh;
+	height:49vh;
 	vertical-align: top;
 	background-repeat:no-repeat;
 	display: inline-block;
@@ -302,7 +301,7 @@ a{
 	position:relative;
 	font-size:23px;
 	display: inline-block;
-	top:300px;
+	top:295px;
 	left:20px;
 	opacity: 10.0;
 }
@@ -312,7 +311,7 @@ a{
 	background-image:url("assets/images/article-image-2.jpg");
 	display: inline-block;
 	background-repeat:no-repeat;
-	height:79vh;
+	height:49vh;
 	vertical-align: top;
 	width:25%;
 	float:left;
@@ -331,7 +330,7 @@ a{
 	background-image:url("assets/images/article-image-3.jpg");
 	display: inline-block;
 	background-repeat:no-repeat;
-	height:79vh;
+	height:49vh;
 	vertical-align: top;
 	width:25%;
 	float:left;
@@ -351,8 +350,7 @@ a{
 	background-image:url("assets/images/article-image-4.jpg");
 	display: inline-block;
 	background-repeat:no-repeat;
-	height:79vh;
-	vertical-align: top;
+	height:49vh;
 	width:25%;
 	float:left;
 	position: relative;
@@ -367,23 +365,10 @@ a{
 	left:20px;
 }
 
-.blue {
-	width:100%;
-	background-color: #006CB0;
-	opacity: 0.2;
-	position: absolute;
-	top:91;
-}
-.blue2 {
-	width:100%;
-	background-color: #006CB0;
-	opacity: 0.2;
-	position: absolute;
-	top:91;
-}
 
-.blue3 {
+.blue3{
 	width:100%;
+	height: 58vh;
 	background-color: #006CB0;
 	opacity: 0.2;
 	position: absolute;
@@ -391,9 +376,9 @@ a{
 
 .blue4 {
 	width:100%;
-	height: 329px;
+	height: 58vh;
 	background-color: #006CB0;
-	opacity: 0.7;
+	opacity: 0.2;
 	position: absolute;
 }
 
@@ -401,27 +386,37 @@ a{
 	position: relative;
 }
 
-.nav-itmes{
-	display: inline-block;
-	position:relative;
-	text-align: right;
-}
-
 .theironyard{
-	width:200%;
-	vertical-align: top;
+	width:100%;
 	position: absolute;
 	padding-right:20px;
-	padding-bottom:10px;
 	background-color:#083452;
-	margin-bottom:-200px;
+	margin-bottom:-100px;
 	color:#DDDDDD;
 	font-family:Oswald, sans-serif;	
 	font-size:10px;
+	text-align: center;
+}
+
+.theironyard-image{
+	text-align: right;
+	padding:0px;
+	margin-right:10px;
+}
+.list{
+	display: inline-block;
+	padding-left:300px;
+	margin-top: 20px;
+	vertical-align: top;
+	text-align: right;
+	position:relative;
+	background-color:#083452;
+	color:#DDDDDD;
+	border-right: solid 1px #DDDDDD;
 }
 
 .nav{
-	display: inline-block;
+display: inline-block;
 	vertical-align: top;
 	text-align: right;
 	position:relative;
